Add module lesson 3

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">HomeMainActivity</string>
+    <string name="app_name">Modules Fundamentals</string>
     <string name="open_first_lesson">Open First Lesson</string>
 </resources>
