--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">Modules Fundamentals</string>
-    <string name="open_first_lesson">Open First Lesson</string>
+    <string name="app_name" translatable="false">Modules Fundamentals</string>
+    <string name="open_first_lesson" translatable="false">Open First Lesson</string>
+    <string name="second_lesson" translatable="false">Second Lesson</string>
+
 </resources>
