added standard components to module

--- a/0_app/src/main/res/values/strings.xml
+++ b/0_app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name" translatable="false">Modules Fundamentals</string>
     <string name="open_first_lesson" translatable="false">Open First Lesson</string>
     <string name="second_lesson" translatable="false">Second Lesson</string>
+    <string name="third_homework" translatable="false">Third Homework</string>
 
 </resources>
