Finished home work

--- a/03_homework-lesson-three/src/main/res/values/strings.xml
+++ b/03_homework-lesson-three/src/main/res/values/strings.xml
@@ -27,7 +27,7 @@
     <string name="chris_evans">Chris Evans</string>
     <string name="mark_ruffalo">Mark Ruffalo</string>
     <string name="tag">Action, Adventure, Fantasy</string>
-    <string name="name">Avengers:________ End Game</string>
+    <string name="name">Avengers: \nEnd Game</string>
     <string name="age">13+</string>
     <string name="back">Back</string>
     <string name="_125_reviews">125 Reviews</string>
